--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>Grocery</li>
             <li>Juice</li>
         </div>
-
+        <i class="fa-solid fa-bars hello" style="color: #000000;"></i>
         <div class="left">
             <li>About</li>
             <li>Contact</li>
